
-Miscellaneous user experience improvements

-Cleanup in default demo config

-Improved documentation

v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.1 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.5:

-BUG FIX: Fixed background tasks overloading low power devices on fresh installations

-BUG FIX: Fixed edge case where system chart timestamps did not report correctly (if a 'NO_DATA' response ocurred in past data)

-Cleanup and additions in default demo config

-Miscellaneous user experience improvements

v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.1 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.6:

-BUG FIX (only for #LINUX# Desktop Edition): Updated custom PHP binary for compatibility with Ubuntu 22.xx

-Automated script for automatically building the PHP CGI binary for LINUX Desktop Edition ("BUILD-PHP-FOR-LINUX-DESKTOP.bash" in main folder, see Help / TROUBLESHOOTING.txt on usage and instructions)

-Documentation on troubleshooting LINUX Desktop Edition startup issues

v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.1 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.7:

-BUG FIXES (minor / miscellaneous)

-Aptos markets / resource page links

-Miscellaneous cleanup and additions in default demo config

-Miscellaneous resources page revisions

v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.1 OR LOWER.

-------------------------------------------------------------------







